Homepage fixed with no overlaps
Footer fixed, no overlap upon resizing the browser. More content to be added;

--- a/stylehomepage.css
+++ b/stylehomepage.css
@@ -64,7 +64,7 @@ header .overlay {
   background-color: #555;
 }
 #button::after {
-  content: "\f077";
+  content: "\f106";
   font-family: FontAwesome;
   font-weight: normal;
   font-style: normal;
@@ -308,46 +308,35 @@ width:50%;
 opacity:0.1;
 }
 
-section#footer {
-  background-color: rgba(0,0,0,10%);
-  height: 50%;
-  min-height: 10rem;
-  max-width: 100%;
-}
-
-section#footer .container-fluid {
-  top: 0;
-  left: 0;
-  height: 100%;
+footer .container-fluid {
+  position:relative;
+  height: 25%;
   width: 100%;
-  background-color: black;
-  opacity: 0.99;
+  background-color: rgba(0,0,0,100%);
   z-index: 0;
 }
 
-footer dl.Authors{
-  position: relative;
+footer dl#Authors{
   display: block;
   float:left;
   padding-top: 20px;
   overflow: hidden;
-  color:white;
-  z-index: 2;
+  color: rgba(999,999,999,0.5);
+  z-index: 3;
 }
 
 footer dd.Authors{
-  position: relative;
   margin-left: 70px;
-  color: rgb(999,999,999);
+  color: rgb(999,999,999,0.8);
   z-index: 100;
+  overflow: visible;
 
 }
 footer dl.Thanks{
-  position: relative;
   display: block;
   float:left;
-  margin-left: 200px;
   padding-top: 20px;
+  color: rgba(999,999,999,0.5);
   overflow: hidden;
 }
 
@@ -358,14 +347,28 @@ footer dd.Thanks{
   z-index: 2;
 }
 footer dl.FindUs{
-  position: relative;
   display: block;
-  margin-left: 800px;
+  float:left;
   padding-top: 20px;
+  color: rgba(999,999,999,0.5);
   overflow: hidden;
 }
 
 footer dd.FindUs{
+  position: relative;
+  margin-left: 70px;
+  color: rgba(999,999,999,0.8);
+  z-index: 2;
+}
+footer dl.Social{
+  display: block;
+  float:left;
+  padding-top: 20px;
+  color: rgba(999,999,999,0.5);
+  overflow: hidden;
+}
+
+footer dd.Social{
   position: relative;
   margin-left: 70px;
   color: rgba(999,999,999,0.8);
@@ -416,7 +419,6 @@ h2{
   font-family: 'Indie Flower';
   font-size: 30px;
   color: white;
-  font-weight: lighter;
 }
 h3{
   font-family: 'Indie Flower';
